Add Cisco setup launcher links
